test/Fail/Issue2828.err
Issue2828.agda:12.9-11: error: [UnequalTerms]
⊤ !=< X
when checking that the expression tt has type X
